{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 79,
  "lineage": "ee7704af-cb66-9470-028a-7df9902690f1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Dockerhost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01aab85a5e4a5a0fe",
            "arn": "arn:aws:ec2:us-east-2:348462908142:instance/i-092833a389bdec30b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-092833a389bdec30b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "EC-2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09d01f36af5b9d6ff",
            "private_dns": "ip-172-20-10-5.us-east-2.compute.internal",
            "private_ip": "172.20.10.5",
            "public_ip": "18.223.184.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dab161d091e7b175",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0babda8e443c03049",
            "tags": {
              "Name": "Docker-ManagedNode"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-071db6b5dc3ab7c0d"
            ]
          },
          "dependencies": [
            "aws_security_group.mylab-secgroup",
            "aws_subnet.mylab-subnet1",
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Mylabinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01aab85a5e4a5a0fe",
            "arn": "arn:aws:ec2:us-east-2:348462908142:instance/i-0398d5b9cb2161146",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0398d5b9cb2161146",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "EC-2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-092680ae60b2258b4",
            "private_dns": "ip-172-20-10-10.us-east-2.compute.internal",
            "private_ip": "172.20.10.10",
            "public_ip": "18.219.203.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09db7da0f188f2d56",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0babda8e443c03049",
            "tags": {
              "Name": "Jenkins-Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-071db6b5dc3ab7c0d"
            ]
          },
          "dependencies": [
            "aws_security_group.mylab-secgroup",
            "aws_subnet.mylab-subnet1",
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Sonatype_nexus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01aab85a5e4a5a0fe",
            "arn": "arn:aws:ec2:us-east-2:348462908142:instance/i-04a508239442e6ead",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04a508239442e6ead",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "EC-2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07abc939eedd1f18b",
            "private_dns": "ip-172-20-10-8.us-east-2.compute.internal",
            "private_ip": "172.20.10.8",
            "public_ip": "3.15.194.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-096444f7ed8577840",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0babda8e443c03049",
            "tags": {
              "Name": "Sonatype-Node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-071db6b5dc3ab7c0d"
            ]
          },
          "dependencies": [
            "aws_security_group.mylab-secgroup",
            "aws_subnet.mylab-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansibleManagedNode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01aab85a5e4a5a0fe",
            "arn": "arn:aws:ec2:us-east-2:348462908142:instance/i-0532dc7c7b8e5b3e6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0532dc7c7b8e5b3e6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "EC-2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d322afaacd2ee1b7",
            "private_dns": "ip-172-20-10-6.us-east-2.compute.internal",
            "private_ip": "172.20.10.6",
            "public_ip": "3.23.94.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05b9fd628ad830d5b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0babda8e443c03049",
            "tags": {
              "Name": "Ansible-ManagedNode"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-071db6b5dc3ab7c0d"
            ]
          },
          "dependencies": [
            "aws_security_group.mylab-secgroup",
            "aws_subnet.mylab-subnet1",
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansiblecontrolnode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01aab85a5e4a5a0fe",
            "arn": "arn:aws:ec2:us-east-2:348462908142:instance/i-07fbcb8f090348479",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07fbcb8f090348479",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "EC-2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ecab863de903fe2a",
            "private_dns": "ip-172-20-10-11.us-east-2.compute.internal",
            "private_ip": "172.20.10.11",
            "public_ip": "18.189.20.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e27d272f5878c19d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0babda8e443c03049",
            "tags": {
              "Name": "Ansible-ControlNode"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-071db6b5dc3ab7c0d"
            ]
          },
          "dependencies": [
            "aws_security_group.mylab-secgroup",
            "aws_subnet.mylab-subnet1",
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-inetGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:348462908142:internet-gateway/igw-0b4af7c1604bcb5f5",
            "id": "igw-0b4af7c1604bcb5f5",
            "owner_id": "348462908142",
            "tags": {
              "Name": "Mylab-inetGW"
            },
            "vpc_id": "vpc-06c677e8e6d1fa1fb"
          },
          "dependencies": [
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Mynode-routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00edde50c93bd5f65",
            "owner_id": "348462908142",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b4af7c1604bcb5f5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Myroute-table"
            },
            "vpc_id": "vpc-06c677e8e6d1fa1fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my-inetGW",
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Mynode-routeAssn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08258b4ede91bc5f0",
            "route_table_id": "rtb-00edde50c93bd5f65",
            "subnet_id": "subnet-0babda8e443c03049"
          },
          "dependencies": [
            "aws_internet_gateway.my-inetGW",
            "aws_route_table.Mynode-routetable",
            "aws_subnet.mylab-subnet1",
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mylab-secgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:348462908142:security-group/sg-071db6b5dc3ab7c0d",
            "description": "allow inbound and outbound traffic to mylab",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-071db6b5dc3ab7c0d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ingresstraffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ingresstraffic",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ingresstraffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ingresstraffic",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ingresstraffic",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "mylab-security-group",
            "name_prefix": "",
            "owner_id": "348462908142",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c677e8e6d1fa1fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mylab-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:348462908142:subnet/subnet-0babda8e443c03049",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.20.10.0/28",
            "id": "subnet-0babda8e443c03049",
            "map_public_ip_on_launch": false,
            "owner_id": "348462908142",
            "tags": {
              "Name": "mylab-subnet1"
            },
            "vpc_id": "vpc-06c677e8e6d1fa1fb"
          },
          "dependencies": [
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mylab-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:348462908142:vpc/vpc-06c677e8e6d1fa1fb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-0262ed5a2899a8e8d",
            "default_route_table_id": "rtb-0dedb123d5c55d649",
            "default_security_group_id": "sg-0b82efcc4e3fea221",
            "dhcp_options_id": "dopt-918c12fa",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06c677e8e6d1fa1fb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0dedb123d5c55d649",
            "owner_id": "348462908142",
            "tags": {
              "Name": "mylab-vpc"
            }
          }
        }
      ]
    }
  ]
}